--- a/views/game.html
+++ b/views/game.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fruit Hunter</title>
+    <link rel="stylesheet" href="./css/game.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <title>Fruit Hunter-Game</title>
 </head>
 <body>
-    
+    <div class="game-name"><span>Fruit</span> Hunter</div>
+    <div class="main-div">
+    </div>
 </body>
 </html>
