--- a/views/game.html
+++ b/views/game.html
@@ -10,7 +10,23 @@
 </head>
 <body>
     <div class="game-name"><span>Fruit</span> Hunter</div>
-    <div class="main-div">
+    <div class="time">
+        <p>Time: </p>
+        <div id="time">60</div>
+    </div>
+        <div class="scores">
+        <div class="your-score">
+            <p>Your score</p>
+            <div id="score">0</div>
+        </div>
+        <div class="oppo-score">
+            <p>Rival's score</p>
+            <div id="oppo-score">0</div>
+        </div>
+    </div>
+    <div class="game-area">
+        <div class="you"></div>
+        <div class="opponent"></div>
     </div>
 </body>
 </html>
