Characters moving functionality added

--- a/views/game.html
+++ b/views/game.html
@@ -9,24 +9,26 @@
     <title>Fruit Hunter-Game</title>
 </head>
 <body>
-    <div class="game-name"><span>Fruit</span> Hunter</div>
-    <div class="time">
-        <p>Time: </p>
-        <div id="time">60</div>
-    </div>
-        <div class="scores">
-        <div class="your-score">
-            <p>Your score</p>
-            <div id="score">0</div>
+    <div class="container">
+        <div class="game-name"><span>Fruit</span> Hunter</div>
+        <div class="time">
+            <p>Time: </p>
+            <div id="time">60</div>
         </div>
-        <div class="oppo-score">
-            <p>Rival's score</p>
-            <div id="oppo-score">0</div>
+            <div class="scores">
+            <div class="your-score">
+                <p>Your score</p>
+                <div id="score">0</div>
+            </div>
+            <div class="oppo-score">
+                <p>Rival's score</p>
+                <div id="oppo-score">0</div>
+            </div>
         </div>
-    </div>
-    <div class="game-area">
-        <div class="you"></div>
-        <div class="opponent"></div>
+        <div class="game-area">
+            <div class="you"></div>
+            <div class="opponent"></div>
+        </div>
     </div>
 </body>
 </html>
