--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -8,7 +8,7 @@
     box-sizing: border-box;
 }
 
-.main-div{
+.container{
     height: 100vh;
     width: 100vw;
     background: url(../img/junglebg.webp);
@@ -16,8 +16,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative;
+    position: absolute;
     overflow: hidden;
+}
+.container .game-name{
+    top: 5%;
 }
 .scores{
     position: absolute;
@@ -102,17 +105,46 @@
 
 #you{
     position: absolute;
-    height: 65px;
-    width: 80px;
-    background: url(../img/character-1-top.png);
-    background-repeat: no-repeat;
+    height: 90px;
+    width: 60px;
+    background: url(../img/character-1.png);
+    background-size: cover;
 }
 
 #opponent{
     position: absolute;
-    height:65px;
-    width: 80px;
-    background: url(../img/character-1-bottom.png);
-    background-repeat: no-repeat;
-    right: 20px;
+    height:90px;
+    width: 60px;
+    background: url(../img/character-2.png);
+    background-size: cover;
+    right: 0%;
+}
+
+.count-down{
+    height: 8rem;
+    width: 100vw;
+    background: rgba(104, 17, 13, 0.781);
+    color: white;
+    font-weight: 700;
+    font-size: 4rem;
+    position: absolute;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+}
+
+.count-down::before{
+    content: '';
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    animation: countdown 4s linear;
+}
+
+@keyframes countdown{
+    0%{content: '3';}
+    25%{content: '2';}
+    50%{content: '1';}
+    75%{content: 'Go!';}
 }
