--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -95,12 +95,13 @@
 }
 .game-area{
     margin-top: 20px;
-    height: 80vh;
-    width: 100vh;
+    height: 550px;
+    width: 650px;
     background: rgba(53, 19, 17, 0.781);
     padding: 1rem;
     position: relative;
     margin-top: 3.5rem;
+    overflow: hidden;
 }
 
 #you{
@@ -147,4 +148,26 @@
     25%{content: '2';}
     50%{content: '1';}
     75%{content: 'Go!';}
+}
+
+.fruit{
+    height: 50px;
+    width: 50px;
+    position: absolute;
+    z-index: 3;
+}
+
+.fruit.Apple{
+    background: url(../img/apple.png);
+    background-size: cover;
+}
+
+.fruit.Banana{
+    background: url(../img/banana.png);
+    background-size: cover;
+}
+
+.fruit.Orange{
+    background: url(../img/orange.png);
+    background-size: cover;
 }
