--- a/views/party.html
+++ b/views/party.html
@@ -70,12 +70,12 @@
     <div class="game-over-page">
         <div class="game-name"><span>Fruit</span> Hunter</div>
         <div class="game-over-your-score">
-            Your Score = <div id="game-over-score">54323</div>
+            Your Score = <div id="game-over-score"></div>
         </div>
         <div class="game-over-oppo-score">
-            Rival's Score = <div id="game-over-oppo-score">45134</div>
+            Rival's Score = <div id="game-over-oppo-score"></div>
         </div>
-        <p id="score-difference">You won by 9199 points</p>
+        <p id="score-difference"></p>
     </div>
     <script defer src="/socket.io/socket.io.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
